implementacao concluida, sem estilização;

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<app-galeria-component></app-galeria-component>
+<app-galeria-component
+  title="Foto de Animais"
+  [pictures]="[
+    '../assets/img/picture1.jpg',
+    '../assets/img/picture2.jpg',
+    '../assets/img/picture3.jpg',
+    '../assets/img/picture4.jpg',
+    '../assets/img/picture5.jpg',
+    '../assets/img/picture6.jpg'
+  ]"
+></app-galeria-component>
+
+<app-galeria-component
+  title="Foto de Pessoas"
+  [pictures]="[]"
+></app-galeria-component>
