--- a/src/app/galeria-component/galeria-component.component.html
+++ b/src/app/galeria-component/galeria-component.component.html
@@ -1,2 +1,14 @@
-<h1>{{ titulo }}</h1>
-<img src="../../assets/img/picture1.jpg" />
+<h3>{{ title }}</h3>
+<div>
+    <div *ngIf="pictures.length === 0">
+        <span>Nenhuma foto</span>
+    </div>
+  <div><img src="{{ pictures[currentPicture] }}" /></div>
+  <div>
+    <span> Foto {{currentPicture+1}} de {{pictures.length}} </span>
+    <button (click)="firstPicture()" [disabled]="currentPicture === 0"><<</button>
+    <button (click)="previousPicture()" [disabled]="currentPicture === 0"><</button>
+    <button (click)="nextPicture()" [disabled]="validateNextAndLastPage()">></button>
+    <button (click)="lastPicture()" [disabled]="validateNextAndLastPage()">>></button>
+  </div>
+</div>
